pyjs_site update: fixed fewer spacing between feature list items (introduced with previous commit), updated section Sites using Pyjamas and fixed html/css in sidebar, some CSS source beautifying

--- a/public/pyjs.css
+++ b/public/pyjs.css
@@ -579,13 +579,24 @@ a:visited {
 .sidebar {
     margin-left: 2em;
     margin-right: 1em;
-    font-size:0.8em;
+    font-size: 0.8em;
+}
+
+.sidebar dl dt {
+    float: left;
+    clear: left;
+    font-weight: bold;
+    padding-right: 0.4em;
+}
+
+.sidebar dl dd {
+    margin: 0;
 }
 
 .sidebar ul {
-    list-style:none;
-    margin:0px;
-    padding:0px;
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
 }
 
 .code {
@@ -603,14 +614,14 @@ a:visited {
     padding: 1em; 
     background-color: rgb(102, 0, 153); 
     color: white;
-    margin:0;
+    margin: 0;
 }
 #nascar {
     float: right;
 }
 #logo {
     float:left;
-    margin:0 2em;
+    margin: 0 2em;
 }
 span.p {
     color: rgb(102, 0, 153)
@@ -624,42 +635,46 @@ span.m {
 #downloadnow {
     background: #d400ba;
     border-bottom: 3px solid rgb(102, 0, 153);
-    text-align:center;
-    padding:0.2em 1em 1em 1em;
+    text-align: center;
+    padding: 0.2em 1em 1em 1em;
 }
 #downloadnow a {
-    color:white;
+    color: white;
 }
 #downloadnow code {
-    color:white;
-    text-weight:bold;
+    color: white;
+    text-weight: bold;
 }
 .c {
     text-align: center
 }
 #tabs {
-    text-align:center
+    text-align: center
 }
 #tabs ul {
-	list-style: none;
-	padding:0;
-	margin:0;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 #tabs li {
-	display: inline;
-	border: solid;
-	border-width: 0px 1px 1px 1px;
-	margin: 0 0.5em 0 0;
+    display: inline;
+    border: solid;
+    border-width: 0px 1px 1px 1px;
+    margin: 0 0.5em 0 0;
     background-color: rgb(102, 0, 153); 	
 }
 #tabs li a {
-	padding: 0 1em;
-	color:white;
-    text-decoration:  none;
+    padding: 0 1em;
+    color: white;
+    text-decoration: none;
 }
 
 h2 {
-font-weight: bold;
-font-family: Helvetica,Arial,sans-serif;
+    font-weight: bold;
+    font-family: Helvetica,Arial,sans-serif;
+}
+
+ul.spaced li, ol.spaced li {
+    padding: 0.5em;
 }
 
